--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
-  "name": "Credits Calculator for SFC",
-  "version": "0.0.4",
+  "name": "Credits Calculator for Keio",
+  "version": "1.0.0",
   "manifest_version": 2,
-  "description": "SFCの成績表システムの機能を拡張します。",
+  "description": "慶應義塾大学の学業成績表表示ページの機能を拡張します。",
   "content_scripts": [
     {
       "matches": ["https://www2.adst.keio.ac.jp/rcs/topMenu"],
-      "js": ["jquery.min.js","script.min.js"],
+      "js": ["jquery.min.js","script.js"],
 	  "run_at": "document_start"
     }
   ]
